...
    }
  }

  LaunchedEffect(selectedPostMarker) { highlightedPost = selectedPostMarker }

  Scaffold(
      modifier = Modifier.testTag("googleMapScreen"),
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
            tabList = LIST_TOP_LEVEL_DESTINATION,
            isUserLoggedIn = isLoggedIn,
            selectedItem = navigationActions.currentRoute())
...
                  } else {
                    Toast.makeText(context, "Please log in to take a picture.", Toast.LENGTH_LONG)
                        .show()
                    navigationActions.navigateTo(Screen.AUTH)
                  }
                },
                modifier = Modifier.testTag("fab_take_picture")) {
                  Icon(Icons.Default.Add, contentDescription = "Take Picture")
                }
      },
      content = { padding ->
        Column {
          // Check and request permission
...
