...
    selectedItem: String
) {
  val toastHelper: ToastHelper = ToastHelper(LocalContext.current)
  val context = LocalContext.current
  val isOnline = remember { mutableStateOf(NetworkUtils.isNetworkAvailable(context)) }
  NavigationBar(
      modifier = Modifier.fillMaxWidth().height(80.dp).testTag("bottomNavigationMenu"),
      containerColor = Color(0xFF0D1023),
      content = {
        tabList.forEach { tab ->
          NavigationBarItem(
              icon = {
                // Load the correct icon based on the type (ImageVector or Painter)
...
